fixed some misspelled words

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <section class="footer">
             <hr>
             <div class="ftst">
-                <a href="/about.html" class="navigator">AOBUT PAGE</a>
+                <a href="/about.html" class="navigator">ABOUT PAGE</a>
                 <a href="/facts.html" class="navigator">NEXT PAGE ➩ The Atomic Bomb and threat of nuclear war</a>    
             </div>
             <hr>
